# mcp-server-email

./: .gitignore  README.md  claude_desktop_config.json  pyproject.toml
src/: server.py
